--- a/angular.json
+++ b/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "cabinaBailon"
+  "defaultProject": "cabinaBailon",
+  "cli": {
+    "analytics": "722567f2-1b3b-4777-ae77-695edf868910"
+  }
 }
